--- a/static/html/homepage.htm
+++ b/static/html/homepage.htm
@@ -13,8 +13,8 @@
 
   <body class=" w3-center w3-animate-opacity">
 
-     <nav class="navbar sticky-top navbar-expand-lg navbar-secondary bg-secondary">
-      <a class="navbar-brand" href="#"><span id="bigSize">Bookable</span></a>
+     <nav class="navbar sticky-top navbar-expand-lg navbar-secondary bg-secondary" >
+      <a class="navbar-brand" href="#"><span id="bigSize"><b>Bookable</b></span></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -30,8 +30,9 @@
       </div>
     </nav>
 
-  <div class = "bg"><span class="image-text"><br>Travel the world <br> with Bookable</span></div>
-
+  <div class = "bg-1"><span class="image-text"><br>Travel the world <br> with Bookable</span></div>
+  <div class = "bg-2"><span class="image-text"><br>Fly <br> with Bookable</span><br>Press <a href = "#">here</a> to start your journey</div>
+  <div class = "bg-3"><span class="image-text"><br>Something <br> about Bus</span><br>Press <a href = "#">here</a> to start your journey</div>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
