--- a/static/html/homepage.htm
+++ b/static/html/homepage.htm
@@ -40,7 +40,7 @@
               </div>
             </div>
             <div class="form-group">
-              <label class="control-label col-sm-2" for="con_pwd">Confirm Password:</label>
+              <label class="control-label col-sm-2" for="con_pwd" ><div >Confirm Password:</div></label>
               <br><div class="col-sm-10">
                 <input type="password" class="form-control" id="con_pwd" placeholder="Enter password">
               </div>
@@ -50,7 +50,6 @@
              
                 <label>Manager<input type="radio" value="manager" name="customer_type"></label>
                 <label>Traveller<input type="radio" value="traveller" name = "customer_type"></label>
-              
           </div>
             <div class="form-group">
               <div class="col-sm-offset-1 col-sm-10">
