--- a/static/html/homepage.htm
+++ b/static/html/homepage.htm
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" type="text/css" href="basic.css">
     <link rel="stylesheet" type="text/css" href="homepage_css.css">
+
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
+    <script src = "homepage.js"> </script>
     <title>Homepage</title>
   </head>
 
@@ -20,7 +25,7 @@
       <div class="tab-content w3-center">
         <div id="home" class="tab-pane fade in active">
           <div class="page-header">Register</div><br>
-          <form class="form-horizontal" >
+          <form class="form-horizontal" id = "RegisterForm">
             <div class="form-group">
               <label class="control-label col-sm-2" for="user_reg">Username:</label>
                <div class="col-sm-10">
@@ -51,13 +56,13 @@
                 <label>Manager<input type="radio" value="manager" name="customer_type"></label>
                 <label>Traveller<input type="radio" value="traveller" name = "customer_type"></label>
           </div>
+          </form>
             <div class="form-group">
               <div class="col-sm-offset-1 col-sm-10">
-                <button type="submit" class="w3-btn w3-ripple w3-green w3-round-large">Submit</button>
+                <button class="w3-btn w3-ripple w3-green w3-round-large" id = "RegisterButton">Submit</button>
               </div>
             </div>
             
-        </form>
         </div>
         <div id="menu1" class="tab-pane fade">
           <div class="page-header">Login</div><br>
@@ -86,10 +91,8 @@
     </div> 
 
   <div class = "bg-1"><span class="image-text-medium"><br><br>Travel the world with <br><span class="image-text-big primary ">Bookable</span></span></div>
-  <div class = "bg-2"><span class="image-text-medium"><br>Fly with<br> <span class="image-text-big secondary ">Bookable</span></span><br>Press <a href = "#">here</a> to start your journey</div>
-  <div class = "bg-3"><span class="image-text"><br>Something <br> about Bus</span><br>Press <a href = "#">here</a> to start your journey</div>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  <div class = "bg-2"><span class="image-text-medium"><br>Fly with<br> <span class="image-text-big secondary ">Bookable</span></span><br>Click <a href = "#">here</a> to start your journey</div>
+  <div class = "bg-3"><span class="image-text"><br>Something <br> about Bus</span><br>Click <a href = "#">here</a> to start your journey</div>
 
   </body>
 </html>
