Switching inputs using Vanilla JS

--- a/static/html/homepage.htm
+++ b/static/html/homepage.htm
@@ -71,8 +71,8 @@
             <div class="form-group">
               <label class="control-label col-sm-2" for="type_reg">Type:</label>
              
-                <label>Manager<input type="radio" value="1" name="Type" id = "manRadio"></label>
-                <label>Traveller<input type="radio" value="0" name = "Type" id = "travRadio" checked></label>
+                <label>Manager<input type="radio" value="1" name="Type" id = "manRadio" onclick = "swap(0)"></label>
+                <label>Traveller<input type="radio" value="0" name = "Type" id = "travRadio" onclick = "swap(1)" checked></label>
           </div>
           
           </form>
