--- a/static/html/homepage.htm
+++ b/static/html/homepage.htm
@@ -66,7 +66,7 @@
           <div class="form-group manStuff" style = "display:none;">
             <label class="control-label col-sm-2" for="man_travels_name">Travels Name</label>
              <div class="col-sm-10">
-              <input type="text" name = "TravelsName" class="form-control" id="man_travels_name" placeholder="Enter travels name">
+              <input type="text" name = "TravelName" class="form-control" id="man_travels_name" placeholder="Enter travels name">
             </div>
           </div>
             <div class="form-group">
