--- a/static/html/homepage.htm
+++ b/static/html/homepage.htm
@@ -18,12 +18,12 @@
   </head>
 
   <body class="w3-animate-opacity">
-    <div class="box w3-center">
+    <div class="box w3-center secondary">
       <ul class="nav nav-tabs">
         <li class="active"><a data-toggle="tab" href="#home">Register</a></li>
         <li><a data-toggle="tab" href="#menu1">Login</a></li>
       </ul>
-      <div class="tab-content w3-center">
+      <div class="tab-content w3-center ">
         <div id="home" class="tab-pane fade in active">
           <div class="page-header">Register</div><br>
           <form class="form-horizontal" id = "RegisterForm">
