Added book.htm stuff

--- a/static/html/book.htm
+++ b/static/html/book.htm
@@ -6,6 +6,10 @@
 	    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 	    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+	    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	    <link rel="preconnect" href="https://fonts.gstatic.com">
+		<link href="https://fonts.googleapis.com/css2?family=Goldman:wght@700&display=swap" rel="stylesheet">
+
 	    <link rel="stylesheet" type="text/css" href="basic.css">
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -17,21 +21,20 @@
 	</head>
 
 	<body>
-
 		<header class = 'centered'>
-			Logo goes here.
+			Bookable
 		</header>
-		<br><br>
+		<br>
 		<div id = 'inputDiv' class = 'container-fluid'>
 			<div class = 'col-md-2'> </div>
 			<div class = 'col-md-2'>
 				<label for = 'src'> Source </label>
-				<input class = 'form-control cityInp' id = 'src' type = 'text'/>
+				<input class = 'cityInp' id = 'src' type = 'text'/>
 			</div>
 			<div class = 'col-md-1'> </div>
 			<div class = 'col-md-2'>
 				<label for = 'dest'> Destination </label>
-				<input class = 'form-control cityInp' id = 'dest' type = 'text'/>
+				<input class = 'cityInp' id = 'dest' type = 'text'/>
 			</div>
 			<div class = 'col-md-1'> </div>
 			<div class = 'col-md-2'>
@@ -39,7 +42,7 @@
 			</div>
 			<div class = 'col-md-2'> </div>
 		</div>
-
+		<br>
 		<div class = 'container' id = 'outerBox'>
 
 		</div>
