Added Bus Form:

--- a/static/html/homepage.htm
+++ b/static/html/homepage.htm
@@ -10,11 +10,12 @@
     <link rel="stylesheet" type="text/css" href="homepage_css.css">
 
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+      <script src = "https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
       <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
     <script src = "homepage.js"> </script>
-    <title>Homepage</title>
+    <title>Bookable - Home</title>
   </head>
 
   <body class="w3-animate-opacity">
