--- a/static/html/manager.htm
+++ b/static/html/manager.htm
@@ -48,14 +48,14 @@
 
                     <div class = "form-row">
                         <div class="col">    
-                            <label class="control-label " for="bus_number">Bus Number</label>
+                            <label class="control-label bus-label" for="bus_number">Bus Number</label>
                             <div class="col-sm-10">
                                 <input type="text" name = "BusNumber" class="inp-bus" id="bus_number" placeholder="Enter Bus Number">
                             </div>
                         </div>
 
                         <div class="col">
-                            <label class="control-label " for="seat_count_bus">Number of Seats</label>
+                            <label class="control-label bus-label" for="seat_count_bus">Number of Seats</label>
                             <div class="col-sm-10">
                                 <input type="number" name = "TotSeat" class="inp-bus" id="seat_count_bus" placeholder="Number of seats">
                             </div>
@@ -65,14 +65,14 @@
                     <br><br>
                     <div class = "form-row">
                         <div class="col">
-                            <label class="control-label " for="src_bus">Source</label>
+                            <label class="control-label bus-label" for="src_bus">Source</label>
                             <div class="col-sm-10">
                                 <input type="text" name = "Src" class="inp-bus" id="src_bus" placeholder="Source">
                             </div>
                         </div>
 
                         <div class="col">
-                            <label class="control-label " for="dest_bus">Destination</label>
+                            <label class="control-label bus-label" for="dest_bus">Destination</label>
                             <div class="col-sm-10">
                                 <input type="text" name = "Dest" class="inp-bus" id="dest_bus" placeholder="Destination">
                             </div>
@@ -82,14 +82,14 @@
                      <br><br>
                     <div class = "form-row">
                         <div class="col">
-                            <label class="control-label " for="dep_bus">Departure</label>
+                            <label class="control-label bus-label" for="dep_bus">Departure</label>
                             <div class="col-sm-10">
                                 <input type="time" name = "Dep" class="inp-bus" id="dep_bus" placeholder="Departure">
                             </div>
                         </div>
 
                         <div class="col">
-                            <label class="control-label " for="arr_bus">Arrival</label>
+                            <label class="control-label bus-label" for="arr_bus">Arrival</label>
                             <div class="col-sm-10">
                                 <input type="time" name = "Arr" class="inp-bus" id="arr_bus" placeholder="Arrival">
                             </div>
@@ -98,7 +98,7 @@
                     <br><br>
                     <div class = "form-row">
                         <div class="col">
-                            <label>Seat Type</label> <br><br>
+                            <label class = "bus-label">Seat Type</label> <br><br>
                             <div class="col-sm-10">
                                 <input type="radio" name = "SeatType" class="inp-bus" value = "0" checked>
                                 Semi - Sleeper <br>
@@ -108,7 +108,7 @@
                         </div>
 
                         <div class="col">
-                            <label>AC Type</label> <br><br>
+                            <label class = "bus-label">AC Type</label> <br><br>
                             <div class="col-sm-10">
                                 <input type="radio" name = "AcType" class="inp-bus" value = "0" checked>
                                 Non - AC <br>
@@ -121,7 +121,7 @@
 
                     <div class = "form-row">
                         <div class="col">
-                            <label class="control-label " for="fare_bus"> Fare (per person) </label>
+                            <label class="control-label bus-label" for="fare_bus"> Fare (per person) </label>
                             <div class="col-sm-10">
                                 <input type="number" name = "Fare" class="inp-bus" id="fare_bus" placeholder="Fare">
                             </div>
@@ -140,10 +140,100 @@
             </div>
 
             <!-- Form for flight -->
-            <div class="tab-pane fade" id="nav-flight" role="tabpanel" > Flight Stuff </div>
+            <div class="tab-pane fade" id="nav-flight" role="tabpanel" > 
+
+                <form class="form-horizontal" id = "FlightForm">
+                    <br><br>
+
+                    <div class = "form-row">
+                        <div class="col">    
+                            <label class="control-label flight-label" for="flight_number">Flight Number</label>
+                            <div class="col-sm-10">
+                                <input type="text" name = "FlightNumber" class="inp-flight" id="flight_number" placeholder="Enter Flight Number">
+                            </div>
+                        </div>
+
+                        <div class="col">
+                            <label class="control-label flight-label" for="seat_count_flight">Number of Seats</label>
+                            <div class="col-sm-10">
+                                <input type="number" name = "TotSeat" class="inp-flight" id="seat_count_flight" placeholder="Number of seats">
+                            </div>
+                        </div>
+                    </div>
+
+                    <br><br>
+                    <div class = "form-row">
+                        <div class="col">
+                            <label class="control-label flight-label" for="src_flight">Source</label>
+                            <div class="col-sm-10">
+                                <input type="text" name = "Src" class="inp-flight" id="src_flight" placeholder="Source">
+                            </div>
+                        </div>
+
+                        <div class="col">
+                            <label class="control-label flight-label" for="dest_flight">Destination</label>
+                            <div class="col-sm-10">
+                                <input type="text" name = "Dest" class="inp-flight" id="dest_flight" placeholder="Destination">
+                            </div>
+                        </div>
+                    </div>
+
+                     <br><br>
+                    <div class = "form-row">
+                        <div class="col">
+                            <label class="control-label flight-label" for="dep_flight">Departure</label>
+                            <div class="col-sm-10">
+                                <input type="time" name = "Dep" class="inp-flight" id="dep_flight" placeholder="Departure">
+                            </div>
+                        </div>
+
+                        <div class="col">
+                            <label class="control-label flight-label" for="arr_flight">Arrival</label>
+                            <div class="col-sm-10">
+                                <input type="time" name = "Arr" class="inp-flight" id="arr_flight" placeholder="Arrival">
+                            </div>
+                        </div>
+                    </div>
+                    <br><br>
+                    <div class = "form-row">
+                        <div class="col">
+                            <label class = "flight-label" for = "src-airp-flight">Source Airport</label> <br><br>
+                            <div class="col-sm-10">
+                                <input type="text" name = "SrcAirport" class="inp-flight" id="src-airp-flight" placeholder="Source Airport">
+                            </div>
+                        </div>
+
+                        <div class="col">
+                            <label class = "flight-label" for = "dest-airp-flight">Destination Airport</label> <br><br>
+                            <div class="col-sm-10">
+                                <input type="text" name = "DestAirport" class="inp-flight" id="dest-airp-flight" placeholder="Destination Airport">
+                            </div>
+                        </div>
+                    </div>
+                    <br><br>
+
+                    <div class = "form-row">
+                        <div class="col">
+                            <label class="control-label flight-label" for="fare_flight"> Fare (per person) </label>
+                            <div class="col-sm-10">
+                                <input type="number" name = "Fare" class="inp-flight" id="fare_flight" placeholder="Fare">
+                            </div>
+                        </div>
+                    </div>
+
+                </form>
+                 <br><br>
+                 <!-- Submit button -->
+                <div class="form-group">
+                  <div class="col-sm-offset-1 col-sm-10">
+                    <button class="w3-btn w3-ripple w3-green w3-round-large" id = "FlightSubmit">Submit</button>
+                  </div>
+                </div>  
+
+            </div>
 
         </div>
-
+        <br><br>
 
     </div>
 
