--- a/static/html/book.htm
+++ b/static/html/book.htm
@@ -22,7 +22,7 @@
 
 	<body>
 		<header class = 'centered'>
-			Bookable
+			<a href = "./" > Bookable </a>
 		</header>
 		<br>
 		<div id = 'inputDiv' class = 'container-fluid'>
