--- a/static/html/manager.htm
+++ b/static/html/manager.htm
@@ -26,7 +26,7 @@
     <body class="w3-animate-opacity">
 
     <header class = 'centered'>
-       Bookable
+       <a href = "./" > Bookable </a>
     </header>
 
     <div id = 'outermost' class = 'container'>
