added started code

--- a/static/html/book.htm
+++ b/static/html/book.htm
@@ -46,6 +46,11 @@
 		<div class = 'container' id = 'outerBox'>
 
 		</div>
+
+
+		<div id="displayBox" class="container">
+						
+		</div>
 	</body>
 
 </html>
