--- a/static/html/book.htm
+++ b/static/html/book.htm
@@ -48,7 +48,7 @@
 		</div>
 
 
-		<div id="displayBox" class="container">
+		<div id="displayBox" class="container" align = "center">
 						
 		</div>
 	</body>
