--- a/static/html/book.htm
+++ b/static/html/book.htm
@@ -23,6 +23,7 @@
 	<body>
 		<header class = 'centered'>
 			<a href = "./" > Bookable </a>
+			<span id = "profileButton" class = "fa fa-address-book"> </span>
 		</header>
 		<br>
 		<div id = 'inputDiv' class = 'container-fluid'>
@@ -47,10 +48,11 @@
 
 		</div>
 
-
+		<br><br>
 		<div id="displayBox" class="container" align = "center">
-						
+			
 		</div>
+		<br><br><br>
 	</body>
 
 </html>
