--- a/static/html/homepage.htm
+++ b/static/html/homepage.htm
@@ -91,7 +91,7 @@
               <div class="form-group">
                 <label class="control-label col-sm-2" for="email">Email:</label>
                  <div class="col-sm-10">
-                  <input type="email" class="form-control" id="email" name = "Email" placeholder="Enter email" autocomplete="on">
+                  <input type="email" class="form-control" id="email" name = "Email" placeholder="Enter email" autocomplete="off">
                 </div>
               </div>
               <div class="form-group">
